# solarbot

apps/robot/: .gitignore
apps/robot/scripts/: run_all.sh  run_battery_udp_node.sh  stop_all.sh  test_soc.py
apps/robot/src/battery_streamer/: package.xml  setup.cfg  setup.py
apps/robot/src/battery_streamer/battery_streamer/: battery_udp_node.py
apps/robot/src/commcheck/: package.xml  setup.cfg  setup.py
apps/robot/src/commcheck/commcheck/: commcheck.py
apps/robot/src/oak_streamer/: package.xml  setup.cfg  setup.py
apps/robot/src/oak_streamer/oak_streamer/: oak_mapping_node.py  oak_streamer_node.py
apps/robot/src/oak_streamer/test/: test_human_detection.py
apps/robot/src/plc_comm/: package.xml  setup.py
apps/robot/src/plc_comm/plc_comm/: udp_listener_node.py
apps/scs/: README.md  pubspec.yaml
apps/scs/android/app/: build.gradle.kts
apps/scs/android/app/src/main/: AndroidManifest.xml
apps/scs/android/app/src/main/kotlin/com/example/scs_app/: MainActivity.kt
apps/scs/ios/Runner/: Info.plist
apps/scs/ios/Runner.xcodeproj/: project.pbxproj
apps/scs/lib/: ana_sayfa.dart  ana_sayfa_icerik.dart  ayarlar.dart  battery_client.dart  camera_service.dart  city_selection.dart  kamera_sayfasi.dart  main.dart  manuel_kontrol.dart  otonom.dart  status_bar.dart  tek_joystick_spawn.dart  weather_service.dart
apps/scs/linux/: CMakeLists.txt
apps/scs/linux/runner/: my_application.cc
apps/scs/macos/Runner.xcodeproj/: project.pbxproj
apps/scs/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/scs/macos/Runner/Configs/: AppInfo.xcconfig
apps/scs/test/: widget_test.dart
apps/scs/web/: index.html  manifest.json
apps/scs/windows/: CMakeLists.txt
apps/scs/windows/runner/: Runner.rc  main.cpp
