<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oak_streamer</name>
  <version>0.0.0</version>
  <description>Oak-D S2 görüntü akış ROS 2 düğümü</description>
  <maintainer email="kaanjetson@todo.todo">kaanjetson</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>depthai</exec_depend>
  <exec_depend>opencv-python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
